Mise à jour des fichiers pour GitHub Pages

--- a/templates/accueil.html
+++ b/templates/accueil.html
@@ -10,7 +10,7 @@
 
 <div class="video-background">
     <video autoplay loop muted>
-        <source src="{{ url_for('static', filename='videos/votre_video.mp4') }}" type="video/mp4">
+        <source src="./static/videos/votre_video.mp4" type="video/mp4">
         Votre navigateur ne supporte pas la lecture de vidéos.
     </video>
 </div>
@@ -25,8 +25,8 @@
                 L'équipe Naka Conseil
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="/module2">Organigramme</a>
-                <a class="dropdown-item" href="/trombinoscope">Trombinoscope</a>
+                <a class="dropdown-item" href="./module2.html">Organigramme</a>
+                <a class="dropdown-item" href="./trombinoscope.html">Trombinoscope</a>
             </div>
         </div>
     </div>
@@ -37,9 +37,9 @@
                 Le séminaire 2023 - 2024
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuRules">
-                <a class="dropdown-item" href="/module1">Règles de vie</a>
-                <a class="dropdown-item" href="/module3">Déroulé du séminaire</a>
-                <a class="dropdown-item" href="/ressource">Personne ressource</a>
+                <a class="dropdown-item" href="./module1.html">Règles de vie</a>
+                <a class="dropdown-item" href="./module3.html">Déroulé du séminaire</a>
+                <a class="dropdown-item" href="./ressource.html">Personne ressource</a>
             </div>
         </div>
     </div>
